--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This project was bootstrapped with Fastify-CLI.",
   "main": "app.js",
+  "type": "module",
   "directories": {
     "test": "test"
   },
@@ -17,11 +18,17 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/cors": "^11.0.1",
+    "@fastify/helmet": "^13.0.1",
     "@fastify/mysql": "^5.0.2",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/sensible": "^6.0.0",
     "fastify": "^5.3.3",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^8.52.0",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2"
+  }
 }
