--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "node --test test/**/*.test.js",
-    "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "start": "fastify start -l info ./booking/index.js",
+    "dev": "nodemon ./booking/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,16 +18,20 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/cors": "^11.0.1",
+    "@fastify/formbody": "^8.0.2",
     "@fastify/helmet": "^13.0.1",
     "@fastify/mysql": "^5.0.2",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/sensible": "^6.0.0",
+    "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "fastify-cli": "^7.4.0",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "mysql2": "^3.14.1"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
+    "nodemon": "^3.1.10",
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2"
   }
