--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fastify/mysql": "^5.0.2",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/sensible": "^6.0.0",
+    "@google-cloud/storage": "^7.16.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "fastify-cli": "^7.4.0",
