--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "fastify": "^5.3.3",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.1",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
