--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@fastify/mysql": "^5.0.2",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@google-cloud/storage": "^7.16.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.1",
     "mysql2": "^3.14.1",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
